--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=back
 
+spring.profiles.active=dev
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.mail.host=smtp.gmail.com
