--- a/front/package.json
+++ b/front/package.json
@@ -53,7 +53,8 @@
     "react-native-worklets": "^0.5.1",
     "react-stately": "^3.39.0",
     "tailwind-variants": "^0.1.20",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "use-debounce": "^10.0.6"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
